Working SignIn system

--- a/SignUp_page.html
+++ b/SignUp_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SignUp | DELTA</title>
     <link href="Styles/SignUp_page.css" rel="stylesheet"/>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Black+Ops+One|Dancing+Script|Playball" rel="stylesheet">
 </head>
 <body>
