--- a/test.html
+++ b/test.html
@@ -1,32 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Blog Home - Start Bootstrap Template</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/blog-home.css" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <title>DELTA | Timeline</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Black+Ops+One|Dancing+Script|Playball" rel="stylesheet">
+    <script src='https://cloud.tinymce.com/stable/tinymce.min.js'></script>
+    <script>
+        tinymce.init({
+            selector: '#mytextarea'
+        });
+    </script>
 </head>
-
-<style>
-    .Post{
-       width:100%;
-    }
-</style>
 
 <body>
 
+    <form>
+        <textarea id="mytextarea">
+        </textarea>
+    </form>
 
+</textarea>
 </body>
-
 </html>
