--- a/MyBlog_page.html
+++ b/MyBlog_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>MyBlog | DELTA</title>
     <link rel="stylesheet" href="Styles/MyBlog_page.css" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Black+Ops+One|Dancing+Script|Playball" rel="stylesheet">
 </head>
 <body>
